--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,8 +40,8 @@
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}">Etusivu</a></li>
-            <li><a href="courses">Kentät</a></li>
-            <li><a href="{{base_path}}">Kirjautuminen</a></li>
+            <li><a href="{{base_path}}/courses">Kentät</a></li>
+            <li><a href="{{base_path}}/login">Kirjautuminen</a></li>
           </ul>
         </div>
       </div>
