--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -2,6 +2,10 @@
 {% block content %}
   <h1>Golfkentät</h1>
 
+  <div class="alert alert-success">
+    {{message}}
+  </div>
+
   <p>
     <a href="{{base_path}}/courses/new" class="btn btn-success">Lisää kenttä</a>
   </p>
