--- a/app/views/course/show.html
+++ b/app/views/course/show.html
@@ -1,29 +1,39 @@
 {% extends "base.html" %}
 {% block content %}
+{% import "macros/forms.html" as forms %}
 
 <div class="alert alert-success">
   {{message}}
 </div>
 
 <h1>{{course.name}}, {{course.city}}</h1>
+
+<p>
+  <form method="post" action="{{course.id}}/destroy" style="display: inline-block;">
+    <button type="submit" class="btn btn-danger">Poista</button>
+  </form>
+  <a href="{{base_path}}/courses/{{course.id}}/edit" class="btn btn-default">Muokkaa</a>
+</p>
+
 <p></p>
 <h2>Reiät: </h2>
-
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
-        <th>Numero</th>
+        <th>Reikä</th>
         <th>Par</th>
         <th></th>
       </tr>
     </thead>
 
     <tbody>
+      {% for hole in holes %}
       <tr>
-        <td></td>
-        <td></td>
+        <td>{{hole.holenumber}}</td>
+        <td>{{hole.par}}</td>
         <td><a class="btn btn-default btn-sm" href="{{base_path}}/courses/{{course.id}}/edit">Muokkaa</a></td>
       </tr>
+      {% endfor %}  
     </tbody>
   </table>
 {% endblock %}
