--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -5,12 +5,12 @@
   <form method="post" action="{{base_path}}/login">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input type="text" class="form-control" name="username" value="{{username}}">
+      <input type="text" name="name" class="form-control">
     </div>
 
     <div class="form-group">
       <label>Salasana</label>
-      <input type="password" class="form-control" name="password">
+      <input type="password" name="password" class="form-control">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
