--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -2,9 +2,11 @@
 {% block content %}
   <h1>Golfkentät</h1>
 
+  {% if message %}
   <div class="alert alert-success">
     {{message}}
   </div>
+  {% endif %}
 
   <p>
     <a href="{{base_path}}/courses/new" class="btn btn-success">Lisää kenttä</a>
