--- a/app/views/course/show.html
+++ b/app/views/course/show.html
@@ -2,9 +2,11 @@
 {% block content %}
 {% import "macros/forms.html" as forms %}
 
+{% if message %}
 <div class="alert alert-success">
   {{message}}
 </div>
+{% endif %}
 
 <h1>{{course.name}}, {{course.city}}</h1>
 
