--- a/app/views/base.html
+++ b/app/views/base.html
@@ -41,8 +41,20 @@
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}">Etusivu</a></li>
             <li><a href="{{base_path}}/courses">Kentät</a></li>
-            <li><a href="{{base_path}}/login">Kirjautuminen</a></li>
+            {% if user_logged_in %}
+            <li><a href="{{base_path}}/playedcourses">Pelatut kierrokset</a></li>
+            <li><a href="{{base_path}}/user/{{user_logged_in.id}}">{{user_logged_in.name}}</a></li>
+            {% endif %}
           </ul>
+          {% if user_logged_in %}
+          <form class="navbar-form navbar-right" method="post" action="/GTK/logout">
+              <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+          </form>
+          {% else %}
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+          </ul>
+          {% endif %}
         </div>
       </div>
     </nav>
