--- a/app/views/playedcourse/new2.html
+++ b/app/views/playedcourse/new2.html
@@ -18,6 +18,7 @@
         <input type="number" max="15" min="1" name="{{hole.holenumber}}" class="form-control" required>
       {% endfor %}
       <input name="course_id" value="{{course.id}}" readonly>
+      <input name="course_name" value="{{course.name}}" readonly>
     </div>
 
 
