added show playedcourse feature and respective models, controllers and views

--- a/app/views/playedcourse/index.html
+++ b/app/views/playedcourse/index.html
@@ -25,7 +25,7 @@
   <tbody>
     {% for course in playedcourses %}
       <tr>
-        <td><a href="{{base_path}}/playedcourses/{{playedcourse.id}}">{{course.course_name}}</td>
+        <td><a href="{{base_path}}/playedcourses/{{course.id}}">{{course.course_name}}</td>
         <td>{{course.course_holes}}</td>
         <td>{{course.result}}</td>
       </tr>
