--- a/app/views/base.html
+++ b/app/views/base.html
@@ -53,6 +53,7 @@
           {% else %}
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+            <li><a href="{{base_path}}/register">Rekistreöidy</a></li>
           </ul>
           {% endif %}
         </div>
