--- a/app/views/user/login.html
+++ b/app/views/user/login.html
@@ -2,6 +2,20 @@
 {% block content %}
   <h1>Kirjaudu sisään</h1>
 
+  {% if message %}
+  <div class="alert alert-success">
+    {{message}}
+  </div>
+  {% endif %}
+
+  {% if error %}
+  <div class="alert alert-danger">
+    <ul>
+        <li>{{error}}</li>
+    </ul>
+  </div>
+  {% endif %}
+
   <form method="post" action="{{base_path}}/login">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
