--- a/app/views/course/show.html
+++ b/app/views/course/show.html
@@ -12,7 +12,7 @@
 
 <p>
   <form method="post" action="{{course.id}}/destroy" style="display: inline-block;">
-    <button type="submit" class="btn btn-danger">Poista</button>
+    <button type="submit" class="btn btn-danger" onclick="return confirm('Tämä toiminto poistaa myös kaikki pelatut kierrokset sekä reiät tältä kentältä, Oletko varma?')">Poista</button>
   </form>
   <a href="{{base_path}}/courses/{{course.id}}/edit" class="btn btn-default">Muokkaa</a>
 </p>
