--- a/app/views/user/show.html
+++ b/app/views/user/show.html
@@ -3,4 +3,11 @@
 
 <h1>{{user.name}}</h1>
 
+<p>
+  <form method="post" action="{{user.id}}/destroy" style="display: inline-block;">
+    <button type="submit" class="btn btn-danger" onclick="return confirm('Kaikki pelatut kierrokset ja reiätkin katoavat, Oletko varma?')">Poista</button>
+  </form>
+  <a href="{{base_path}}/user/{{user.id}}/edit" class="btn btn-default">Muokkaa</a>
+</p>
+
 {% endblock %}
